--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
   <link rel="icon" type="image/svg+xml" href="/new-club_icon_white.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>C.A.P.S 동국대학교 학술동아리</title>
+  <script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "qqhdpa3g8z");
+</script>
 </head>
 
 <body>
